nav links contrast fix

--- a/style.css
+++ b/style.css
@@ -72,11 +72,6 @@ nav {
     font-size: 16px;
 }
 
-.nav-links li a:hover{
-    transition: all .2s ease-in-out;
-    color: rgb(228, 169, 61);
-}
-
 /* hamburger animation */
 svg {
     position: absolute;
@@ -864,16 +859,8 @@ footer > p {
         background-color: #5b78c7; 
     }
 
-    .nav-links li:nth-child(1) {
-        transition: none;
-    }
-    
-    .nav-links li:nth-child(2) {
-        transition: none;
-    }
-    
-    .nav-links li:nth-child(3) {
-        transition: none;
+    .nav-links li:nth-child(1), .nav-links li:nth-child(2), .nav-links li:nth-child(3), .nav-links li:nth-child(4) {
+        transition: all .2s ease-in-out; 
     }
 
     .knack-logo {
